# ml-basics

./: JiT-bottleneck-spectral-analysis.py  Makefile  README.md  backprop_scalars.py  basic_self_attention.py  complete_self_attention.py  cross_entropy.py  gaussian_mixture_model.py  gradient_plot.py  gradient_update_methods.py  hopfield_network.py  kmeans.py  kmeans_imputer.py  manifold-aware-bottleneck-layer.ipynb  nadaray-watson.ipynb  pyproject.toml  rank_collapse.py  remote_run.sh  run_clip_vae_training.sh  svd_image_compression.py  vae-zero-to-hero.ipynb  whitening.py
diffusion_manifold_spectral_decomp/: compare_patch_spectral_analysis.py  diff_transformer_spectral_analysis.py  text_spectral_analysis.py
diffusion_zero_to_hero/: 01_one_coin_mle.py  03_one_coin_em_missing.py  03_two_coin_em.py  diffusion.py  extract_clip_embeddings.py  test_train_step.py  train_clip_vae.py  train_diffusion.py  train_vae.py  train_vae_cached.py  vae-zero-to-hero.ipynb  vae.py  vae_clip.py
ode_solvers/: lorenz_attractor.py  ode_solvers.py  ode_solvers_lotka_volterra.py  ode_solvers_van_der_pol.py
