[project]
name = "ml-basics"
version = "0.1.0"
description = ""
authors = [{name = "Vikram Pawar", email = "pvikram035@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.4.0",
    "scikit-learn>=1.5.1",
    "numpy>=1.26.4",
    "matplotlib>=3.9.1",
    "manim>=0.18.1",
    "pandas>=2.0.0",
    "pyparsing>=2.1.4",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.4",
    "jax>=0.4.30",
    # jax_fusion dependencies (needed for vae_basic.py)
    "flax>=0.12.0",
    "optax>=0.2.0",
    "jax-flow",
]

[tool.uv.sources]
# Local jax_fusion for diffusion examples
jax_fusion = { path = "../jax_fusion" }
